# travvy-project-manager

./: .editorconfig  Cargo.toml  LICENSE  README.md  README.tpl  install.ps1  install.sh
.github/workflows/: release.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/src/tpm/: main.rs.html
docs/src/tpm_lib/: lib.rs.html
docs/tpm/: all.html  fn.main.html  index.html
docs/tpm_lib/: all.html  constant.ABOUT.html  constant.APP_NAME.html  constant.VALID_SHELLS.html  constant.VERSION.html  constant.WELCOME_SCREEN.html  enum.Action.html  enum.Dialogue.html  enum.DynErr.html  enum.OpenAction.html  fn.add_project.html  fn.change_directory.html  fn.create_path_with_parent_dirs.html  fn.delete_project.html  fn.delete_projects.html  fn.edit_project.html  fn.exit_with.html  fn.gen_completions.html  fn.get_config_dir.html  fn.get_current_shell.html  fn.get_matches.html  fn.get_path_to_shell_profile.html  fn.get_visits.html  fn.handler.html  fn.increment_visits.html  fn.load_projects.html  fn.load_projects_from_disk.html  fn.new_project.html  fn.open_in_editor.html  fn.open_project.html  fn.open_projects_file.html  fn.project_already_exists.html  fn.quit.html  fn.save_projects.html  fn.select_no_projects_found.html  fn.show_add_project_interface.html  fn.show_home_interface.html  fn.show_new_project_interface.html  fn.show_overwrite_project_interface.html  fn.show_select_projects_interface.html  (+4 more)
src/: completions.sh  error.rs  lib.rs  main.rs
(+4 files in other folders)
