[package]
name = "travvy-project-manager"
version = "0.1.0"
edition = "2021"
description = "A simple project manager for the command line"

[[bin]]
name = "tpm"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
toml = "0.5.8"
dialoguer = "0.11.0"
dirs = "5.0.1"

# optimized release profile
[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
