[package]
name = "travvy-project-manager"
version = "0.1.12"
edition = "2021"
description = "A simple project manager for the command line"
license = "MIT"
readme = "README.md"

[[bin]]
name = "tpm"
path = "src/main.rs"

[lib]
name = "tpm_lib"
path = "src/lib.rs"

[dependencies]
clap = "3.1.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
dialoguer = "0.11.0"

# optimized release profile
[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
strip = true
